--- a/pruebabotones/pruebabotones/pruebabotones.csproj
+++ b/pruebabotones/pruebabotones/pruebabotones.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -82,6 +83,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\FranieVariableTest-ExtraLight-BF64c31f3ceda28.otf" />
+    <None Include="Resources\optimist.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\text2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
